--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,30 @@
 Package: HMDA
 Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Title: Holistic Multimodel Domain Analysis for Exploratory Machine Learning
+Version: 0.1
+Authors@R: 
+    person("E. F. Haghish",
+           role = c("aut", "cre", "cph"),
+           email = "haghish@hotmail.com")
+Depends: 
+    R (>= 3.5.0)
+Description: This R package introduces Holistic Multimodel Domain Analysis (HMDA),
+    an new paradigm for exploring domains related to an outcome. HMDA trains a 
+    grid of supervised learning models, and instead of selecting the best-performing 
+    model, it takes the inconsistencies between the good models into account to 
+    explore domains of items and indicators related to an outcome. For each of the
+    models, Weighted Mean SHAP (WMSHAP) is computed, taking the performance of the 
+    model into account. 
+License: MIT + file LICENSE
 Encoding: UTF-8
+Imports:
+    ggplot2 (>= 3.4.2),
+    h2o (>= 3.34.0.0),
+    curl (>= 4.3.0),
+    waffle (>= 1.0.2),
+    md.log (>= 0.2.0),
+    shapley (>= 0.4)
+RoxygenNote: 7.3.2
 LazyData: true
+URL: https://github.com/haghish/HMDA, https://www.sv.uio.no/psi/english/people/academic/haghish/
+BugReports: https://github.com/haghish/HMDA/issues
