--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 export(check_efa)
 export(dictionary)
+export(hmda.domain)
+export(hmda.efa)
 export(hmda.feature.selection)
 export(hmda.grid)
 export(hmda.grid.analysis)
@@ -9,11 +11,52 @@ export(hmda.init)
 export(hmda.partition)
 export(hmda.random.search)
 export(hmda.suggest.param)
+export(hmda.wmshap)
+export(hmda.wmshap.table)
 export(suggest_mtries)
+importFrom(curl,curl)
 importFrom(dplyr,bind_rows)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,coord_flip)
+importFrom(ggplot2,element_text)
+importFrom(ggplot2,expansion)
+importFrom(ggplot2,geom_col)
+importFrom(ggplot2,geom_errorbar)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,ggtitle)
+importFrom(ggplot2,guide_colourbar)
+importFrom(ggplot2,guide_legend)
+importFrom(ggplot2,guides)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,margin)
+importFrom(ggplot2,scale_colour_gradient2)
+importFrom(ggplot2,scale_y_continuous)
+importFrom(ggplot2,theme)
+importFrom(ggplot2,theme_classic)
+importFrom(ggplot2,xlab)
+importFrom(ggplot2,ylab)
+importFrom(h2o,h2o.F2)
+importFrom(h2o,h2o.accuracy)
+importFrom(h2o,h2o.auc)
+importFrom(h2o,h2o.aucpr)
 importFrom(h2o,h2o.automl)
 importFrom(h2o,h2o.clusterInfo)
 importFrom(h2o,h2o.getFrame)
 importFrom(h2o,h2o.getModel)
+importFrom(h2o,h2o.giniCoef)
 importFrom(h2o,h2o.init)
+importFrom(h2o,h2o.mean_per_class_error)
+importFrom(h2o,h2o.r2)
+importFrom(h2o,h2o.shap_summary_plot)
+importFrom(h2o,h2o.stackedEnsemble)
 importFrom(h2otools,automlModelParam)
+importFrom(shapley,shapley)
+importFrom(shapley,shapley.domain)
+importFrom(stats,aggregate)
+importFrom(stats,formula)
+importFrom(stats,na.omit)
+importFrom(stats,weighted.mean)
+importFrom(utils,globalVariables)
+importFrom(utils,setTxtProgressBar)
+importFrom(utils,txtProgressBar)
+importFrom(waffle,waffle)
