--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,9 @@ Authors@R:
            role = c("aut", "cre", "cph"),
            email = "haghish@hotmail.com")
 Depends: 
-    R (>= 3.5.0)
+    R (>= 3.5.0),
+    h2o (>= 3.34.0.0),
+    shapley (>= 0.4)
 Description: This R package introduces Holistic Multimodel Domain Analysis (HMDA),
     an new paradigm for exploring domains related to an outcome. HMDA trains a 
     grid of supervised learning models, and instead of selecting the best-performing 
