--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(dictionary)
 export(hmda.adjust.params)
 export(hmda.autoEnsemble)
 export(hmda.best.models)
+export(hmda.domain)
 export(hmda.feature.selection)
 export(hmda.grid)
 export(hmda.grid.analysis)
@@ -21,12 +22,18 @@ importFrom(curl,curl)
 importFrom(dplyr,bind_rows)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,coord_flip)
+importFrom(ggplot2,element_text)
 importFrom(ggplot2,expansion)
 importFrom(ggplot2,geom_col)
 importFrom(ggplot2,geom_errorbar)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggtitle)
+importFrom(ggplot2,guide_colourbar)
+importFrom(ggplot2,guide_legend)
+importFrom(ggplot2,guides)
+importFrom(ggplot2,labs)
 importFrom(ggplot2,margin)
+importFrom(ggplot2,scale_colour_gradient2)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_classic)
@@ -57,7 +64,10 @@ importFrom(h2o,h2o.shutdown)
 importFrom(h2o,h2o.stackedEnsemble)
 importFrom(h2otools,automlModelParam)
 importFrom(shapley,shapley)
+importFrom(shapley,shapley.domain)
+importFrom(stats,aggregate)
 importFrom(stats,cor)
+importFrom(stats,formula)
 importFrom(stats,na.omit)
 importFrom(stats,weighted.mean)
 importFrom(utils,capture.output)
