--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(hmda.adjust.params)
 export(hmda.autoEnsemble)
 export(hmda.best.models)
 export(hmda.domain)
+export(hmda.efa)
 export(hmda.feature.selection)
 export(hmda.grid)
 export(hmda.grid.analysis)
@@ -63,6 +64,10 @@ importFrom(h2o,h2o.shap_summary_plot)
 importFrom(h2o,h2o.shutdown)
 importFrom(h2o,h2o.stackedEnsemble)
 importFrom(h2otools,automlModelParam)
+importFrom(psych,fa.diagram)
+importFrom(psych,fa.sort)
+importFrom(psych,factor.scores)
+importFrom(psych,omega)
 importFrom(shapley,shapley)
 importFrom(shapley,shapley.domain)
 importFrom(stats,aggregate)
