--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(dictionary)
 export(hmda.adjust.params)
 export(hmda.autoEnsemble)
 export(hmda.best.models)
+export(hmda.compare.shap.plot)
 export(hmda.domain)
 export(hmda.efa)
 export(hmda.feature.selection)
@@ -12,8 +13,11 @@ export(hmda.grid)
 export(hmda.grid.analysis)
 export(hmda.init)
 export(hmda.partition)
+export(hmda.plot)
+export(hmda.plot.metrics)
 export(hmda.search.param)
 export(hmda.suggest.param)
+export(hmda.test)
 export(hmda.wmshap)
 export(hmda.wmshap.table)
 export(suggest_mtries)
@@ -70,6 +74,9 @@ importFrom(psych,factor.scores)
 importFrom(psych,omega)
 importFrom(shapley,shapley)
 importFrom(shapley,shapley.domain)
+importFrom(shapley,shapley.domain.test)
+importFrom(shapley,shapley.feature.test)
+importFrom(shapley,shapley.plot)
 importFrom(stats,aggregate)
 importFrom(stats,cor)
 importFrom(stats,formula)
